--- a/index.html
+++ b/index.html
@@ -5,6 +5,98 @@
 <meta charset='utf-8'>
 </head>
 <body>
-<div>Hello!</div>
+<p>Gabe's Math World</p>
+<math>
+  <mstyle displaystyle="true">
+    <munderover>
+      <mo>&prod;</mo>
+      <mrow>
+        <mi>a</mi>
+        <mo>=</mo>
+        <mn>0</mn>
+      </mrow>
+      <mrow>
+        <mi>n</mi>
+        <mo>-</mo>
+        <mn>1</mn>
+      </mrow>
+    </munderover>
+    <mo>(</mo>
+    <mi>x</mi>
+    <mo>-</mo>
+    <msub>
+      <mi>x</mi>
+      <mi>a</mi>
+    </msub>
+    <mo>)</mo>
+    <mo>=</mo>
+    <munderover>
+      <mo>&sum;</mo>
+      <mrow>
+        <mi>b</mi>
+        <mo>=</mo>
+        <mn>0</mn>
+      </mrow>
+      <mrow>
+        <mi>n</mi>
+        <mo>-</mo>
+        <mn>1</mn>
+      </mrow>
+    </munderover>
+    <msup>
+      <mrow>
+        <mo>(</mo>
+        <mn>-1</mn>
+        <mo>)</mo>
+      </mrow>
+      <mi>b</mi>
+    </msup>
+    <mo>(</mo>
+    <msub>
+      <mo>&sum;</mo>
+      <mrow>
+        <mi>A</mi>
+        <mo>&isin;</mo>
+        <mi>&weierp;</mi>
+        <mo>(</mo>
+        <msub>
+          <mn>&integers;</mn>
+          <mi>n</mi>
+        </msub>
+        <mo>)</mo>
+        <mo>:</mo>
+        <mo>|</mo>
+        <mi>A</mi>
+        <mo>|</mo>
+        <mo>=</mo>
+        <mn>b</mn>
+      </mrow>
+    </msub>
+    <mo>(</mo>
+    <munderover>
+      <mo>&prod;</mo>
+      <mrow>
+        <mi>a</mi>
+        <mo>&isin;</mo>
+        <mi>A</mi>
+      </mrow>
+      <mn></mn>
+    </munderover>
+    <msub>
+      <mi>x</mi>
+      <mi>a</mi>
+    </msub>
+    <mo>)</mo>
+    <mo>)</mo>
+    <msup>
+      <mi>x</mi>
+      <mrow>
+        <mi>n</mi>
+        <mo>-</mo>
+        <mi>b</mi>
+      </mrow>
+    </msup>
+  </mstyle>
+</math>
 </body>
 </html>
