--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gabriel Pivovarov</title>
-</head>
-<body>
-<h1>Gabriel Pivovarov</h1>
-<p>Body text</p>
-<p>Another paragraph</p>
-</body>
-</html>
+
+<h1>UNO Schedule (Fall 2018)</h1>
