--- a/design.html
+++ b/design.html
@@ -9,8 +9,8 @@
 	<p>Haitian Boat Project
 	<nav>
 		<ul>
-			<li><a id=currentpage>Home</a>
-			<li><a href=design.html>Design Competition</a>
+			<li><a href=index.html>Home</a>
+			<li><a id=currentpage>Design Competition</a>
 			<li><a href=#>Submit a Design</a>
 			<li><a href=#>About</a>
 			<li><a href=#>Honorarium</a>
@@ -22,10 +22,10 @@
 
 <main>
 	<div style=width:75%;>
-		<h1>Sails for Sustenance</h1>
-		<p>A short blurb about the project should go here.
+		<h1>The International Design Competition</h1>
+		<p>A more detailed explanation of the competition should go here.
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat.
-		<p>To learn more about our international design competition, <a href=design.html>click here.</a>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat.
 	</div>
 	<div id=sidebar>
 		<section>
