--- a/design.html
+++ b/design.html
@@ -2,40 +2,38 @@
 
 <meta charset=UTF-8>
 <link href=style.css rel=stylesheet>
-<title>Sails for Sustenance</title>
+<title>Haitian Boat Project</title>
 
-<header>
-	<h1>Sails for Sustenance</h1>
+<header id=design>
+	<h1>SAILS FOR SUSTENANCE</h1>
 	<p>Haitian Boat Project
 	<nav>
 		<ul>
 			<li><a href=index.html>Home</a>
 			<li><a id=currentpage>Design Competition</a>
-			<li><a href=#>Submit a Design</a>
-			<li><a href=#>About</a>
-			<li><a href=#>Honorarium</a>
-			<li><a href=#>Donate</a>
-			<li><a href=#>Contact Us</a>
+			<li><a href=submit.html>Submit a Design</a>
+			<li><a href=donate.html>Donate</a>
+			<li><a href=honor.html>Honorarium</a>
+			<li><a href=about.html>About</a>
+			<li><a href=contact.html>Contact Us</a>
 		</ul>
 	</nav>
 </header>
 
 <main>
-	<div style=width:75%;>
-		<h1>The International Design Competition</h1>
+	<section>
+		<h1>International Boat Design Competition</h1>
 		<p>A more detailed explanation of the competition should go here.
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat.
+		<p>Bulleted list:
+		<ul>
+			<li>Item one
+			<li>Item two
+			<li>Item three
+			<li>...
+		</ul>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat.
-	</div>
-	<div id=sidebar>
-		<section>
-			<h2>Want to submit a boat design?</h2>
-			<button>Submit a Design</button>
-		</section>
-		<section>
-			<h2>Donate to Sails for Sustenance</h2>
-			<p>A PayPal Donate button could go here (but this requires a PayPal business account).
-			<p>Also, a link for donating in kind will go here.
-		</section>
-	</div>
+		<p>If you want to submit a boat design for our competition, click the button below.</a>
+		<p class=navybutton><a href=submit.html>Submit a Design</a>
+	</section>
 </main>
