--- a/index.html
+++ b/index.html
@@ -2,36 +2,6 @@
 
 <meta charset=UTF-8>
 <link href=style.css rel=stylesheet>
-<title>Haitian Boat Project</title>
+<title>Gabe Pivovarov</title>
 
-<header id=home>
-	<h1>SAILS FOR SUSTENANCE</h1>
-	<p>Haitian Boat Project
-	<nav>
-		<ul>
-			<li><a id=currentpage>Home</a>
-			<li><a href=design.html>Design Competition</a>
-			<li><a href=submit.html>Submit a Design</a>
-			<li><a href=donate.html>Donate</a>
-			<li><a href=honor.html>Honorarium</a>
-			<li><a href=about.html>About</a>
-			<li><a href=contact.html>Contact Us</a>
-		</ul>
-	</nav>
-</header>
-
-<main>
-	<section style=width:70%;>
-		<h1>Design Challenge: The $2,500 Sail-driven Fishing Boat</h1>
-		<p>A short blurb about the project should go here.
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat.
-		<p>To learn more about our international design competition, <a href=design.html>click here.</a>
-	</section>
-	<section id=sidebar>
-		<h3>Submit a boat design</h3>
-		<p class=navybutton><a href=submit.html>Submit a Design</a>
-		<h3>Donate to Sails for Sustenance</h3>
-		<p>A PayPal Donate button could go here (but this requires a PayPal business account).
-		<p>Also, a link for donating in kind will go here.
-	</section>
-</main>
+<p>Hello!
