--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <meta charset=UTF-8>
-<link href=style.css rel=stylesheet>
 <title>Gabe Pivovarov</title>
 
-<p>Hello!
+<ul>
+<li><a href=sibrochure9.html>SI Brochure (9th edition)</a>
+</ul>
